Initial commit of MPfm into SVN.
git-svn-id: http://hamster-svn/svn/repos/base@4 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/trunk/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/trunk/MPfm.Sound/MPfm.Sound.csproj
@@ -10,14 +10,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MPfm.Sound</RootNamespace>
     <AssemblyName>MPfm.Sound</AssemblyName>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
+    <SccProjectName>Svn</SccProjectName>
+    <SccLocalPath>Svn</SccLocalPath>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccProvider>SubversionScc</SccProvider>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
