--- a/MPfm/trunk/MPfm/MPfm.csproj
+++ b/MPfm/trunk/MPfm/MPfm.csproj
@@ -12,14 +12,10 @@
     <AssemblyName>MPfm</AssemblyName>
     <StartupObject>
     </StartupObject>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
+    <SccProjectName>Svn</SccProjectName>
+    <SccLocalPath>Svn</SccLocalPath>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccProvider>SubversionScc</SccProvider>
     <ApplicationIcon>MPFM.ico</ApplicationIcon>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
