--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -228,6 +228,7 @@
     <Content Include="Lib\taglib-sharp.dll" />
     <Content Include="MPFM.ico" />
     <Content Include="References\taglib-sharp.dll" />
+    <None Include="Resources\time1.png" />
     <None Include="Resources\MPFM_Splash_0.4.png" />
     <None Include="Resources\shape_align_middle.png" />
     <None Include="Resources\textfield_rename.png" />
