--- a/MPfm/branches/current/MPfm/app.config
+++ b/MPfm/branches/current/MPfm/app.config
@@ -16,6 +16,6 @@
   </system.data>
   <connectionStrings>
     <!--  Important: Put the exact path in "data source" or the application will crash (SQLite bug) --> 
-    <add name="MPFM_EF" connectionString="metadata=res://*/Data.MPFM_EF.csdl|res://*/Data.MPFM_EF.ssdl|res://*/Data.MPFM_EF.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=E:\Code2010\MPfm\Output\Debug\MPFM.db&quot;" providerName="System.Data.EntityClient" />
+    <add name="MPFM_EF" connectionString="metadata=res://*/Data.MPFM_EF.csdl|res://*/Data.MPFM_EF.ssdl|res://*/Data.MPFM_EF.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=D:\Code\MPfm\Solution\Output\Debug\MPFM.db&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
