--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -92,6 +92,12 @@
   <ItemGroup>
     <Compile Include="Classes\MPFMConfig.cs" />
     <Compile Include="Classes\SongQuery.cs" />
+    <Compile Include="Other Screens\frmAddEditLoop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Other Screens\frmAddEditLoop.Designer.cs">
+      <DependentUpon>frmAddEditLoop.cs</DependentUpon>
+    </Compile>
     <Compile Include="Other Screens\frmAddEditMarker.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,10 @@
     <EmbeddedResource Include="frmUpdateLibraryStatus.resx">
       <SubType>Designer</SubType>
       <DependentUpon>frmUpdateLibraryStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Other Screens\frmAddEditLoop.resx">
+      <DependentUpon>frmAddEditLoop.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Other Screens\frmAddEditMarker.resx">
       <DependentUpon>frmAddEditMarker.cs</DependentUpon>
