git-svn-id: http://hamster-svn/svn/repos/base@40 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -77,7 +77,7 @@
   <ItemGroup>
     <Compile Include="AudioFile.cs" />
     <Compile Include="AudioTools.cs" />
-    <Compile Include="Channel.cs" />
+    <Compile Include="FMod\Channel.cs" />
     <Compile Include="ConvertAudio.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="DSP\DSP.cs" />
