--- a/MPfm/trunk/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/trunk/MPfm.Sound/MPfm.Sound.csproj
@@ -77,20 +77,20 @@
   <ItemGroup>
     <Compile Include="AudioFile.cs" />
     <Compile Include="AudioTools.cs" />
-    <Compile Include="Channel.cs" />
     <Compile Include="ConvertAudio.cs" />
     <Compile Include="Driver.cs" />
-    <Compile Include="DSP\DSP.cs" />
-    <Compile Include="DSP\ParamEQDSP.cs" />
-    <Compile Include="FMod\fmod.cs" />
-    <Compile Include="FMod\fmod_dsp.cs" />
-    <Compile Include="FMod\fmod_errors.cs" />
-    <Compile Include="FMod\fmod_memoryinfo.cs" />
-    <Compile Include="DSP\PitchShiftDSP.cs" />
-    <Compile Include="Sound.cs" />
+    <Compile Include="FMod\DSP.cs" />
+    <Compile Include="FMod\ParamEQDSP.cs" />
+    <Compile Include="FMod\Channel.cs" />
+    <Compile Include="FMod\FMod\fmod.cs" />
+    <Compile Include="FMod\FMod\fmod_dsp.cs" />
+    <Compile Include="FMod\FMod\fmod_errors.cs" />
+    <Compile Include="FMod\FMod\fmod_memoryinfo.cs" />
+    <Compile Include="FMod\PitchShiftDSP.cs" />
+    <Compile Include="FMod\Sound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Fmod64BitWord.cs" />
-    <Compile Include="System.cs" />
+    <Compile Include="FMod\Fmod64BitWord.cs" />
+    <Compile Include="FMod\System.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
   </ItemGroup>
@@ -119,6 +119,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Lib\taglib-sharp.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Bass.Net\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
