Add initial support for Bass.Net (Stream, System, Exception), and start working on PlayerV4 (Bass.Net prototype) Related to the issue #148.
git-svn-id: http://hamster-svn/svn/repos/base@46 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Library.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerV3.cs" />
+    <Compile Include="PlayerV4.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
