More work on the Bass.Net wrapper. Related to issue #148.
git-svn-id: http://hamster-svn/svn/repos/base@48 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -78,7 +78,7 @@
   <ItemGroup>
     <Compile Include="AudioFile.cs" />
     <Compile Include="AudioTools.cs" />
-    <Compile Include="Bass.Net\Stream.cs" />
+    <Compile Include="Bass.Net\Channel.cs" />
     <Compile Include="Bass.Net\Exception.cs" />
     <Compile Include="Bass.Net\System.cs" />
     <Compile Include="ConvertAudio.cs" />
