PlaybackEngineV4 0.1.6.0 UI: Added Time shifting, Next/Prev/Repeat buttons, new status bar update, and more UI bug fixes. PlayerV4: Added a second constructor to let users specify the mixer sample rate, added RepeatType, MixerSampleRate properties. Related to issue #148.
git-svn-id: http://hamster-svn/svn/repos/base@55 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/PlaybackEngineV3/PlaybackEngineV4.csproj
+++ b/MPfm/branches/current/PlaybackEngineV3/PlaybackEngineV4.csproj
@@ -85,6 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="1474_Tape.ico" />
+    <None Include="Resources\RepeatHS.png" />
+    <None Include="Resources\DataContainer_MoveLastHS.png" />
+    <None Include="Resources\DataContainer_MoveFirstHS.png" />
     <None Include="Resources\PauseHS.png" />
     <None Include="Resources\DeleteHS.png" />
     <None Include="Resources\PlayHS.png" />
