--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="PlayerV3.cs" />
     <Compile Include="PlayerV4.cs" />
+    <Compile Include="PlayerV4Misc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
