PlaybackEngineV4 0.2.4.0 PlayerV4: - Added 18-band equalizer with default values for now.
Related to the issue #148.

git-svn-id: http://hamster-svn/svn/repos/base@61 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/TestControls/app.config
+++ b/MPfm/branches/current/TestControls/app.config
@@ -19,6 +19,6 @@
   <connectionStrings>
     <!--  Important: Put the exact path in "data source" or the application will crash (SQLite bug) -->
     <!--<add name="MPFM_EF" connectionString="metadata=res://*/Data.MPFM_EF.csdl|res://*/Data.MPFM_EF.ssdl|res://*/Data.MPFM_EF.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=c:\Program Files (x86)\MPfm\MPfm.db&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="MPFM_EF" connectionString="metadata=res://*/Data.MPFM_EF.csdl|res://*/Data.MPFM_EF.ssdl|res://*/Data.MPFM_EF.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=e:\Code2010\MPfm\Output\Debug\MPfm.db&quot;" providerName="System.Data.EntityClient" />
+    <add name="MPFM_EF" connectionString="metadata=res://*/Data.MPFM_EF.csdl|res://*/Data.MPFM_EF.ssdl|res://*/Data.MPFM_EF.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=D:\Code\MPfm\Branches\Current\Output\Debug\MPfm.db&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
