--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -76,8 +76,11 @@
     <Compile Include="Library.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerV3.cs" />
-    <Compile Include="PlayerV4.cs" />
-    <Compile Include="PlayerV4Misc.cs" />
+    <Compile Include="PlayerV4\EQPreset.cs" />
+    <Compile Include="PlayerV4\Player.cs" />
+    <Compile Include="PlayerV4\EQPresetBand.cs" />
+    <Compile Include="PlayerV4\Events.cs" />
+    <Compile Include="PlayerV4\Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
