PlaybackEngineV4 0.3.0.0 UI: - Redesigned most of the interface. - Added the EQ group which lists all 18 bands of the EQ and lets the user read/set the gain and other EQ parameters. - Added the Loop group which lets the user play/stop a simple loop on the currently playing channel. PlayerV4: - Finished work on EQ presets. Added ResetEQ to Player. - Added Loops & Markers. Added StartLoop/StopLoop. Loops are working very well.
Related to issue #148.


git-svn-id: http://hamster-svn/svn/repos/base@63 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -76,7 +76,9 @@
     <Compile Include="Library.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerV3.cs" />
+    <Compile Include="PlayerV4\Marker.cs" />
     <Compile Include="PlayerV4\EQPreset.cs" />
+    <Compile Include="PlayerV4\Loop.cs" />
     <Compile Include="PlayerV4\Player.cs" />
     <Compile Include="PlayerV4\EQPresetBand.cs" />
     <Compile Include="PlayerV4\Events.cs" />
