PlaybackEngineV4 0.4.0.0 UI: - Added Settings window with Sound Card Settings and Audio Settings sections. PlayerV4: - Added UpdatePeriod, UpdateThread, BufferSize properties BassNetWrapper: - Added the Device and DeviceHelper classes. These classes are used for detecting audio devices on the system. - Added the TestDevice class. This is used to test playback on an audio device.
Related to issue #148.


git-svn-id: http://hamster-svn/svn/repos/base@65 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -79,6 +79,9 @@
     <Compile Include="AudioFile.cs" />
     <Compile Include="AudioTools.cs" />
     <Compile Include="Bass.Net\Channel.cs" />
+    <Compile Include="Bass.Net\TestDevice.cs" />
+    <Compile Include="Bass.Net\DeviceHelper.cs" />
+    <Compile Include="Bass.Net\Device.cs" />
     <Compile Include="Bass.Net\Exception.cs" />
     <Compile Include="Bass.Net\System.cs" />
     <Compile Include="ConvertAudio.cs" />
@@ -124,7 +127,9 @@
   <ItemGroup>
     <Content Include="Lib\bass.dll" />
     <Content Include="Lib\Bass.Net.dll" />
+    <Content Include="Lib\bassasio.dll" />
     <Content Include="Lib\bassflac.dll" />
+    <Content Include="Lib\basswasapi.dll" />
     <Content Include="Lib\bass_fx.dll" />
     <Content Include="Lib\fmodex.dll" />
     <Content Include="Lib\taglib-sharp.dll" />
