--- a/MPfm/branches/current/PlaybackEngineV3/PlaybackEngineV4.csproj
+++ b/MPfm/branches/current/PlaybackEngineV3/PlaybackEngineV4.csproj
@@ -58,10 +58,19 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -85,6 +94,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="1474_Tape.ico" />
+    <None Include="Resources\sound.png" />
+    <None Include="Resources\asterisk_orange.png" />
+    <None Include="Resources\disk.png" />
+    <None Include="Resources\cog.png" />
     <None Include="Resources\chart_bar_error.png" />
     <None Include="Resources\chart_bar_edit.png" />
     <None Include="Resources\RepeatHS.png" />
