PlaybackEngineV4 0.4.3.0 UI: - The Settings window now load/saves configuration to file. - The Settings window now detects changes and offers the user to save only if the settings have changed. - The Settings window now detects if a new sound card configuration hasn't been tested. - The application startup now reads the configuration file and initializes the player using the deviceName/driverType from the configuration file. BassNetWrapper: - Added FindDevices to DeviceHelper. This helps find the current deviceId by the deviceName and its driverType. - Fixed a bug in Init (wasn't taking the deviceId parameter).
Related to issue #148.


git-svn-id: http://hamster-svn/svn/repos/base@68 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/PlaybackEngineV3/PlaybackEngineV4.csproj
+++ b/MPfm/branches/current/PlaybackEngineV3/PlaybackEngineV4.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigData.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +83,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
