MPfm 0.4.5.1 - Removed the BPMono and CPMono fonts from MPfm.Fonts.dll, and from all font collections. - Added the Droid Sans Mono font to MPfm.Fonts.dll - Replaced all references to BPMono to Droid Sans Mono.
Related to issue #101.


git-svn-id: http://hamster-svn/svn/repos/base@74 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Fonts/MPfm.Fonts.csproj
+++ b/MPfm/branches/current/MPfm.Fonts/MPfm.Fonts.csproj
@@ -94,10 +94,7 @@
     <EmbeddedResource Include="Titillium2.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="BPmono.ttf" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="CPmono.ttf" />
+    <EmbeddedResource Include="DroidSansMono.ttf" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
