--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -76,6 +76,8 @@
     <Compile Include="Library.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerV3.cs" />
+    <Compile Include="PlayerV4\PlaylistItem.cs" />
+    <Compile Include="PlayerV4\Playlist.cs" />
     <Compile Include="PlayerV4\Marker.cs" />
     <Compile Include="PlayerV4\EQPreset.cs" />
     <Compile Include="PlayerV4\Loop.cs" />
