MPfm 0.5.0.0 preliminary - Added a timer for updating the output meter display. It works perfectly!!   So that means it should be easy to convert the waveform display control. - Converted all streams to FLOAT, which finally made the extaction of sample data   working. - This seems to have enabled WASAPI playback but it is frequently interrupted for some reason. - This has broken the ASIO support. To enable it, just remove the FLOAT property in BassInfo.   However, that means that the sample data cannot be extracted. A solution will have to be found.   As usual, everything works in DirectSound.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@82 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -83,7 +83,7 @@
     <Compile Include="Bass.Net\DeviceHelper.cs" />
     <Compile Include="Bass.Net\Device.cs" />
     <Compile Include="Bass.Net\Exception.cs" />
-    <Compile Include="Bass.Net\System.cs" />
+    <Compile Include="Bass.Net\Base.cs" />
     <Compile Include="ConvertAudio.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="FMod\DSP.cs" />
