--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -95,6 +95,7 @@
     <Compile Include="FMod\FMod\fmod_memoryinfo.cs" />
     <Compile Include="FMod\PitchShiftDSP.cs" />
     <Compile Include="FMod\Sound.cs" />
+    <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FMod\Fmod64BitWord.cs" />
     <Compile Include="FMod\System.cs" />
