MPfm 0.5.0.0 alpha - Added the SQLiteGateway and MPfmGateway classes. This implements the Gateway design pattern to access data. - Added the ConvertDTO.Songs method which converts a DataTable into a list of SongDTO.
Related to issue #152 and issue #153.


git-svn-id: http://hamster-svn/svn/repos/base@84 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -63,7 +63,9 @@
     <Reference Include="taglib-sharp, Version=2.0.4.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\MPfmGateway.cs" />
     <Compile Include="Data\DataAccess.cs" />
+    <Compile Include="Data\SQLiteGateway.cs" />
     <Compile Include="Data\MPFM_EF.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
