MPfm 0.5.0.0 alpha - Equalizer and Folders are now available in MPfmGateway!
Related to issue #152.


git-svn-id: http://hamster-svn/svn/repos/base@88 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -72,6 +72,8 @@
       <DependentUpon>MPFM_EF.edmx</DependentUpon>
     </Compile>
     <Compile Include="DTO\ConvertDTO.cs" />
+    <Compile Include="DTO\EqualizerDTO.cs" />
+    <Compile Include="DTO\FolderDTO.cs" />
     <Compile Include="DTO\PlaylistSongDTO.cs" />
     <Compile Include="DTO\PlaylistDTO.cs" />
     <Compile Include="DTO\SongDTO.cs" />
