Added LoopDTO and MarkerDTO with nothing in them.
git-svn-id: http://hamster-svn/svn/repos/base@91 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Data\MPfmGateway.cs" />
     <Compile Include="Data\SQLiteGateway.cs" />
     <Compile Include="DTO\ConvertDTO.cs" />
+    <Compile Include="DTO\LoopDTO.cs" />
+    <Compile Include="DTO\MarkerDTO.cs" />
     <Compile Include="DTO\EqualizerDTO.cs" />
     <Compile Include="DTO\FolderDTO.cs" />
     <Compile Include="DTO\PlaylistSongDTO.cs" />
