MPfm 0.5.0.0 alpha - Migration to .NET 4.0 is COMPLETED! Everything works. Replaced the SQLite assemblies by the new .NET 4.0 assemblies.
Related to issue #152 and issue #153.


git-svn-id: http://hamster-svn/svn/repos/base@93 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/App.Config
+++ b/MPfm/branches/current/MPfm.Library/App.Config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="MPFM_EF" connectionString="metadata=res://*/Data.MPFM_EF.csdl|res://*/Data.MPFM_EF.ssdl|res://*/Data.MPFM_EF.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=D:\Code\MPfm\Solution\Output\Debug\MPfm.db&quot;" providerName="System.Data.EntityClient" />
+    <add name="MPFM_EF" connectionString="metadata=res://*/Data.MPFM_EF.csdl|res://*/Data.MPFM_EF.ssdl|res://*/Data.MPFM_EF.msl;provider=System.Data.SQLite;provider connection string=&quot;data source=D:\Code\MPfm\Solution\Output\Debug\MPfm.db&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
