--- a/MPfm/branches/current/PlaybackEngineV3/App.config
+++ b/MPfm/branches/current/PlaybackEngineV3/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
     <!--<add key="LastUsedDirectory" value="E:\Mp3\Kraftwerk\Trans-Europe Express" />
@@ -9,4 +9,4 @@
     <add key="DeviceId" value="0" />
     <add key="DeviceName" value="ASIO DirectX Full Duplex Driver" />-->
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
