MPfm 0.5.0.0 alpha - Removed FMOD completely from the project. - Removed FMOD wrapper from the project.   Everything works without FMOD now. Yay!
Related to issue #156.


git-svn-id: http://hamster-svn/svn/repos/base@95 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -233,7 +233,6 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Lib\fmodex.dll" />
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
@@ -359,7 +358,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(ProjectDir)\Lib\fmodex.dll $(TargetDir)
+    <PostBuildEvent>copy $(ProjectDir)\Lib\taglib-sharp.dll $(TargetDir)
 copy $(ProjectDir)\Lib\SQLite.Interop.dll $(TargetDir)
 copy $(ProjectDir)\Lib\System.Data.SQLite.dll $(TargetDir)
 copy $(ProjectDir)\Lib\System.Data.SQLite.Linq.dll $(TargetDir)</PostBuildEvent>
