mp4m.org Website 1.2 preliminary - Added more stuff to the Download page, removed useless stuff.
git-svn-id: http://hamster-svn/svn/repos/base@101 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/mp4m.org.csproj
+++ b/mp4m.org/trunk/mp4m.org/mp4m.org.csproj
@@ -160,6 +160,8 @@
     <Content Include="Images\screenshots\0.4.4.9\splash_t.png" />
     <Content Include="Images\screenshots\0.4.4.9\update_library.png" />
     <Content Include="Images\screenshots\0.4.4.9\update_library_t.png" />
+    <Content Include="Images\screenshots\PlaybackEngineV4Demo.png" />
+    <Content Include="Images\screenshots\PlaybackEngineV4Demo_t.png" />
     <Content Include="Images\screenshots\scanmp3headers.png" />
     <Content Include="Images\screenshots\scanmp3headers_t.png" />
     <Content Include="Images\slider_effects.png" />
