MPfm 0.5.0.0 alpha - Reactivated most of the code in the Settings window except for the Close window.   This means that if the user tests audio files, the application WILL crash. There is more work to do.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@104 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -99,6 +99,7 @@
     <Reference Include="taglib-sharp, Version=2.0.4.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\DriverComboBoxItem.cs" />
     <Compile Include="Classes\MPFMConfig.cs" />
     <Compile Include="Classes\SongQuery.cs" />
     <Compile Include="Other Screens\frmAddEditLoop.cs">
