MPfm 0.5.0.0 alpha - Moved SongDTO temporarily to MPfm.Player... - ... in order to remove dependency of MPfm.Library to MPfm.Player.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@115 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -89,6 +89,10 @@
       <Project>{D536FDE5-989E-4979-9B39-63621AE4A205}</Project>
       <Name>MPfm.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MPfm.Player\MPfm.Player.csproj">
+      <Project>{FEB7497C-784C-4380-874F-46FD93C82BA1}</Project>
+      <Name>MPfm.Player</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.csproj">
       <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
       <Name>MPfm.Sound</Name>
