MPfm 0.5.0.0 alpha - Work on EQPresets and to eliminate EqualizerDTO - Removed SongDTO from AudioFile, that required some changes to the Player
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@116 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -242,6 +242,7 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Config.xml" />
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
