MPfm 0.5.0.0 alpha - Removed DTOs entirely from project! Did some renaming too.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@119 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -60,13 +60,8 @@
   <ItemGroup>
     <Compile Include="MPfmGateway.cs" />
     <Compile Include="SQLiteGateway.cs" />
-    <Compile Include="DTO\ConvertDTO.cs" />
-    <Compile Include="DTO\LoopDTO.cs" />
-    <Compile Include="DTO\MarkerDTO.cs" />
-    <Compile Include="DTO\EqualizerDTO.cs" />
-    <Compile Include="DTO\FolderDTO.cs" />
-    <Compile Include="DTO\PlaylistSongDTO.cs" />
-    <Compile Include="DTO\PlaylistDTO.cs" />
+    <Compile Include="ConvertLibrary.cs" />
+    <Compile Include="Folder.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
