MPfm 0.5.0.0 alpha - Added LOTS of comments to MPfm.Sound. All classes are now commented. - Replaced PlayerV4 to Player in the MPfm class. This requires changes in several windows.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@120 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -81,16 +81,16 @@
     <Compile Include="AudioFile.cs" />
     <Compile Include="AudioTools.cs" />
     <Compile Include="Bass.Net\Channel.cs" />
+    <Compile Include="Bass.Net\ChannelType.cs" />
+    <Compile Include="Bass.Net\DriverType.cs" />
     <Compile Include="Bass.Net\TestDevice.cs" />
     <Compile Include="Bass.Net\DeviceHelper.cs" />
     <Compile Include="Bass.Net\Device.cs" />
     <Compile Include="Bass.Net\Exception.cs" />
     <Compile Include="Bass.Net\Base.cs" />
     <Compile Include="ConvertAudio.cs" />
-    <Compile Include="Driver.cs" />
     <Compile Include="PeakFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timer.cs" />
     <Compile Include="XingInfoHeaderReader.cs" />
   </ItemGroup>
   <ItemGroup>
