MPfm 0.5.0.0 alpha - More comments!
git-svn-id: http://hamster-svn/svn/repos/base@121 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
@@ -54,6 +54,7 @@
     <Content Include="Lib\Bass.Net.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RepeatType.cs" />
     <Compile Include="EQPreset.cs" />
     <Compile Include="EQPresetBand.cs" />
     <Compile Include="Events.cs" />
