MPfm 0.5.0.0 alpha - Separated and renamed most SongGridView classes into different files. Now much cleaner. - Added canceling and peak file corruption replacing to the WaveFormMarkersLoops control.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@130 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -100,13 +100,16 @@
       <DependentUpon>AlbumView.cs</DependentUpon>
     </Compile>
     <Compile Include="Library\AlbumViewItems.cs" />
+    <Compile Include="Library\SongGridViewCache.cs" />
+    <Compile Include="Library\SongGridViewColumn.cs" />
+    <Compile Include="Library\SongGridViewItem.cs" />
     <Compile Include="Library\SongGridView.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Library\SongGridView.Designer.cs">
       <DependentUpon>SongGridView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Library\SongGridViewItems.cs" />
+    <Compile Include="Library\SongGridViewImageCache.cs" />
     <Compile Include="Misc\HScrollBar.cs">
       <SubType>Component</SubType>
     </Compile>
