MPfm 0.5.0.0 alpha - Added a LOT of comments to the AlbumView and SongGridView controls.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@131 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -99,7 +99,8 @@
     <Compile Include="Library\AlbumView.Designer.cs">
       <DependentUpon>AlbumView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Library\AlbumViewItems.cs" />
+    <Compile Include="Library\AlbumViewItem.cs" />
+    <Compile Include="Library\AlbumViewCache.cs" />
     <Compile Include="Library\SongGridViewCache.cs" />
     <Compile Include="Library\SongGridViewColumn.cs" />
     <Compile Include="Library\SongGridViewItem.cs" />
