MPfm 0.5.0.0 alpha - Fixed playlist double click, now skips to song properly if the player is playing or not.
Related to issue #151.


git-svn-id: http://hamster-svn/svn/repos/base@133 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -90,9 +90,6 @@
     <Compile Include="Fonts\FontCollection.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Labels\TimeLabel.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Library\AlbumView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -101,6 +98,7 @@
     </Compile>
     <Compile Include="Library\AlbumViewItem.cs" />
     <Compile Include="Library\AlbumViewCache.cs" />
+    <Compile Include="Library\SongGridViewMode.cs" />
     <Compile Include="Library\SongGridViewCache.cs" />
     <Compile Include="Library\SongGridViewColumn.cs" />
     <Compile Include="Library\SongGridViewItem.cs" />
@@ -112,9 +110,6 @@
     </Compile>
     <Compile Include="Library\SongGridViewImageCache.cs" />
     <Compile Include="Misc\HScrollBar.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Misc\ProgressBar.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Misc\ListBox.cs">
@@ -140,9 +135,6 @@
     </Compile>
     <Compile Include="Views\ReorderListView.Designer.cs">
       <DependentUpon>ReorderListView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\TreeView.cs">
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Views\ListView.cs">
       <SubType>Component</SubType>
